# teaclave-trustzone-sdk

./: .licenserc.yaml  NOTICE  README.md  rust
.github/: release-drafter.yml
.github/workflows/: reuse_test_in_optee_repo.yml
crates/rustls_provider/: Cargo.toml
docs/: advanced-setup.md  building-rust-ca-as-android-elf.md  emulate-and-dev-in-docker.md  expanding-ta-secure-memory-on-qemuv8.md  migrating-to-new-building-env.md  release-tips.md  writing-rust-tas-using-optee-utee-build.md
examples/TEElog-TA/host/: Cargo.toml
examples/TEElog-satellite/ta/: Cargo.toml
examples/acipher-rs/host/: Cargo.toml
examples/aes-rs/host/: Cargo.toml
examples/attestation-rs/app/: uuid.txt
examples/attestation-rs/attestation/: Cargo.toml
examples/attestation-rs/attestation/src/: attest.rs  common.rs  endorse.rs  lib.rs  verify.rs
examples/attestation-rs/attestation/src/tests/: attestation_flow.rs
examples/attestation-rs/attestation_forwarder/: Cargo.toml
examples/attestation-rs/attestation_forwarder/src/: client.rs  lib.rs
examples/attestation-rs/os/: optee_os.c43b8cf79b73c98c4474e952ecf9980e36bbda30.patch
examples/attestation-rs/sdk/: quoting_ta_uuid.txt
examples/attestation-rs/sdk/quoting_ta/: Cargo.toml  Makefile  build.rs
examples/attestation-rs/sdk/quoting_ta/src/: attester.rs  endorsement_store.rs  endorser.rs  main.rs  pta_command.rs
examples/attestation-rs/sdk/quoting_ta/test_keys/: generate_test_keys.sh
examples/authentication-rs/host/: Cargo.toml
examples/big_int-rs/host/: Cargo.toml
examples/build_with_optee_utee_sys-rs/host/: Cargo.toml
examples/build_with_optee_utee_sys-rs/ta/: Cargo.toml
examples/client_pool-rs/host/: Cargo.toml
examples/client_pool-rs/ta/: Cargo.toml
examples/diffie_hellman-rs/host/: Cargo.toml
examples/digest-rs/host/: Cargo.toml
examples/error_handling-rs/host/: Cargo.toml
examples/hello_world-rs/host/: Cargo.toml
examples/hello_world-rs/ta/: Cargo.toml
examples/hotp-rs/host/: Cargo.toml
examples/inter_ta-rs/host/: Cargo.toml
examples/message_passing_interface-rs/host/: Cargo.toml
examples/message_passing_interface-rs/proto/: Cargo.toml
examples/message_passing_interface-rs/ta/: Cargo.toml
examples/mnist-rs/host/: Cargo.toml
examples/mnist-rs/proto/: Cargo.toml
examples/mnist-rs/ta/: Cargo.toml
examples/property-rs/host/: Cargo.toml
examples/secure_db_abstraction-rs/host/: Cargo.toml
examples/secure_db_abstraction-rs/proto/: Cargo.toml
examples/secure_db_abstraction-rs/ta/: Cargo.toml
examples/secure_storage-rs/host/: Cargo.toml
examples/secure_storage-rs/proto/: Cargo.toml
optee-teec/: Cargo.toml
optee-teec/macros/: Cargo.toml
optee-teec/optee-teec-sys/: Cargo.toml
optee-teec/systest/: Cargo.toml
optee-utee/: Cargo.toml
optee-utee-build/: Cargo.toml
optee-utee/macros/: Cargo.toml
optee-utee/optee-utee-sys/: Cargo.toml
scripts/release/: make_release_artifacts.sh
(+39 files in other folders)
