[package]
name = "attestation"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10.8", default-features = false }
hex = "0.4"
ring = { version = "0.16.20", optional = true }
uuid = { version = "1.16.0", features = ["serde"] }

[features]
test = ["ring"]