[package]
name = "attestation_forwarder"
version = "0.1.0"
edition = "2021"

[dependencies]
optee-utee-sys = { path = "../../../optee-utee/optee-utee-sys" }
optee-utee = { path = "../../../optee-utee" }

quoting_ta_proto = { path = "../sdk/quoting_ta_proto"}

num_enum = { version = "0.7.3", default-features = false }