# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "ta"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/apache/incubator-teaclave-trustzone-sdk.git"
description = "An example of Rust OP-TEE TrustZone SDK."
edition = "2018"

[dependencies]
optee-utee = { path = "../../../../optee-utee" }
optee-utee-sys = { path = "../../../../optee-utee/optee-utee-sys" }
attestation = { path = "../../attestation" }
secure_db = { path = "../../../../crates/secure_db" }
quoting_ta_proto = { path = "../quoting_ta_proto" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.0"
anyhow = "1.0" 
base64ct = "=1.5.0"
hex = "0.4"
num_enum = { version = "0.7.3", default-features = false }
ring = { git = "https://github.com/DemesneGH/ring-optee.git", branch = "0.16.20-optee", default-features = false }

[build-dependencies]
optee-utee-build = { path = "../../../../optee-utee-build" }
quoting_ta_proto = { path = "../quoting_ta_proto" }

[profile.release]
panic = "abort"
lto = false
opt-level = 1

[patch."https://github.com/apache/incubator-teaclave-trustzone-sdk.git"]
optee-utee = { path = "../../../../optee-utee" }